syntax = "proto3";
package timekeeping_service.api;
option go_package = "../api";

// ---------------------------------------------------------------------------------------

import "library/googleapis/google/api/annotations.proto";
import "timekeeping_service/api/data.proto";

service TimekeepingService {
  rpc GetHistoryOfUser(GetHistoryOfUserRequest) returns (GetHistoryOfUserResponse) {
    option (google.api.http) = {
      post: "/api/v1/timekeeping/history",
      body: "*"
    };
  }
  rpc CreateHistoryOfUser(CreateHistoryOfUserRequest) returns (CreateHistoryOfUserResponse) {
    option (google.api.http) = {
      post: "/api/v1/timekeeping/create",
      body: "*"
    };
  }
  rpc UpdateHistoryOfUser(UpdateHistoryOfUserRequest) returns (UpdateHistoryOfUserResponse) {
    option (google.api.http) = {
      post: "/api/v1/timekeeping/update"
      body: "*"
    };
  }
}